bugfix: drawToggle no longer shifts other elements on hovering

--- a/src/containers/Draw/Draw.module.css
+++ b/src/containers/Draw/Draw.module.css
@@ -1,59 +1,51 @@
 .OpenDrawWrapper {
+  position: relative;
   cursor: pointer;
   margin: -5px;
   text-align: center;
 }
 
 .CloseDrawWrapper {
+  position: relative;
   cursor: pointer;
-  margin: -25px 0 20px 0;
+  margin: -20px 0 20px 0;
   text-align: center;
-}
-
-.OpenDrawWrapper:hover .DrawIcon {
-  width: 20px;
-  margin-bottom: -5px;
-}
-
-.CloseDrawWrapper:hover .DrawIcon {
-  width: 20px;
-  margin-bottom: -5px;
 }
 
 .DrawToggle {
   box-shadow: 0px 5px 20px rgb(24, 24, 24);
   height: auto;
   margin: 0px 15px 0px 15px;
-  background-color: #A9B4C2;
+  background-color: #a9b4c2;
 }
 
 .HighlightDrawToggle {
-  background-color: #EEF1EF;
+  background-color: #eef1ef;
 }
 
 .DrawToggle:hover {
   cursor: pointer;
-  background-color: #EEF1EF;
+  background-color: #eef1ef;
 }
 
-.DrawToggle:hover .DrawIcon {
-  width: 20px;
-  margin-bottom: -5px;
-}
-
-.DrawIcon:hover {
-  width: 20px;
-  margin-bottom: -5px;
-}
-
-.DrawIcon {
+.OpenDrawIcon {
+  z-index: 90;
+  position: relative;
   width: 15px;
   height: auto;
 }
 
+.CloseDrawIcon {
+  z-index: 90;
+  position: relative;
+  width: 15px;
+  height: auto;
+}
+
+/* adding margin-bottom causes last draw element to reduce size of parent div */
 .ExpandDrawIcon {
-  width: 20px;
-  margin-bottom: -5px;
+  top: 5px;
+  /* margin-bottom: -5px; */
 }
 
 .ProjectTitle {
